Added bootstrap for games template

--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -20,5 +20,5 @@
   <%= @club.address %>
 </p>
 
-<%= link_to 'Edit', edit_club_path(@club) %> |
+<%= link_to 'Edit', edit_club_path(@club), class: "btn btn-primary" %> |
 <%= link_to 'Back', clubs_path %>
