--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -20,5 +20,5 @@
   <%= @game.end_date %>
 </p>
 
-<%= link_to 'Edit', edit_game_path(@game) %> |
+<%= link_to 'Edit', edit_game_path(@game), class: "btn btn-primary" %> |
 <%= link_to 'Back', games_path %>
