--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <%= link_to "Clubs", clubs_path, class: "nav-link"%>
         </li>
+        <li class="nav-item">
+          <%= link_to "Games", games_path, class: "nav-link"%>
+        </li>
       </ul>
       <div class="d-flex">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
