--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -31,6 +31,19 @@
     <%= form.datetime_select :end_date, class: "form-control"  %>
   </div>
 
+  <%= form.fields_for :players do |f| %>
+    <div class="row mb-3">
+      <div class="col-lg-3">
+        <%= f.label :user_id, "Player" %>
+        <%= f.collection_select(:user_id, User.all, :id, :full_name, { :prompt => 'Select Player'}, { class: 'form-control' }) %>
+      </div>
+      <div class="col-lg-3">
+        <%= f.label :score %>
+        <%= f.number_field :score, placeholder: "Enter score", required: true, class: 'form-control' %>
+      </div>
+    </div>
+  <% end %>
+
   <div class="actions">
     <%= form.submit class: "btn btn-primary" %>
   </div>
